# dev-centric-omni-agent

./: .gitignore  README.md  README_CN.md  main.py  pyproject.toml  requirements.txt  test_agent.py
.trae/rules/: my-ai-agent.md
src/: agent.py  graph.py  state.py
src/dev_centric_omni_agent/: graph.py  main.py
src/dev_centric_omni_agent/models/: __init__.py
src/dev_centric_omni_agent/nodes/: __init__.py  agent.py
src/dev_centric_omni_agent/prompts/: __init__.py
src/models/: __init__.py
src/nodes/: __init__.py  agent.py  router.py  search.py  summarizer.py  tool.py
src/prompts/: __init__.py  agent_prompt.py  router_prompt.py  summarize_prompt.py  system_prompt.py
tests/: test_graph.py  test_models.py  test_nodes.py  test_prompts.py  test_state.py
