[project]
name = "my-ai-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain-core>=1.2.20",
    "langchain-openai>=1.1.11",
    "python-dotenv>=1.2.2",
    "langchain-mcp-adapters>=0.1.0",
    "langchain>=1.2.13",
    "langchain-tavily>=0.2.17",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

[dependency-groups]
dev = [
    "deptry>=0.25.1",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.25.0",
]
