[project]
name = "dev-centric-omni-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.20",
    "langchain-openai>=1.1.11",
    "langgraph>=1.1.3",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.2",
    "typing-extensions>=4.15.0",
    "langchain-mcp-adapters>=0.1.0",
    "mcp>=1.0.0",
]

[project.scripts]
app = "dev_centric_omni_agent.main:main"

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

[dependency-groups]
dev = [
    "deptry>=0.25.1",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.25.0",
]
